--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "recoil": "0.0.10"
   },
   "scripts": {
+    "analyze": "source-map-explorer 'build/static/js/*.js'",
     "lint": "eslint src/**/*",
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -41,6 +42,7 @@
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-react": "^7.20.6",
     "eslint-plugin-react-hooks": "^4.1.0",
+    "source-map-explorer": "^2.5.0",
     "typescript": "~3.7.2"
   }
 }
