--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "holo-now",
   "version": "0.1.0",
   "dependencies": {
+    "@emotion/core": "^10.0.35",
+    "@emotion/styled": "^10.0.27",
     "dayjs": "^1.8.35",
+    "emotion": "^10.0.27",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
