--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emotion/styled": "^10.0.27",
     "dayjs": "^1.8.35",
     "emotion": "^10.0.27",
+    "emotion-normalize": "^10.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
