--- a/package.json
+++ b/package.json
@@ -50,6 +50,6 @@
     "eslint-plugin-react": "^7.20.6",
     "eslint-plugin-react-hooks": "^4.1.0",
     "source-map-explorer": "^2.5.0",
-    "typescript": "~3.7.2"
+    "typescript": "^4.0.2"
   }
 }
