--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dayjs": "^1.8.35",
     "emotion": "^10.0.27",
     "emotion-normalize": "^10.1.0",
+    "immer": "^7.0.8",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
