--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "emotion": "11.0.0",
     "emotion-normalize": "11.0.1",
     "immer": "^7.0.8",
+    "next": "12.0.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "recoil": "^0.5.2"
