chore: add scripts

--- a/package.json
+++ b/package.json
@@ -19,12 +19,11 @@
     "recoil": "^0.5.2"
   },
   "scripts": {
-    "analyze": "source-map-explorer 'build/static/js/*.js'",
-    "lint": "eslint src/**/*",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "test": "jest --watch"
   },
   "browserslist": {
     "production": [
