--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "holo-now",
   "version": "0.1.0",
   "dependencies": {
-    "@emotion/core": "11.0.0",
+    "@emotion/react": "11.7.0",
     "@emotion/styled": "11.6.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
