--- a/package.json
+++ b/package.json
@@ -48,12 +48,13 @@
     "@types/react-router-dom": "^5.1.5",
     "@typescript-eslint/eslint-plugin": "^4.0.1",
     "@typescript-eslint/parser": "^4.0.1",
+    "eslint": "7.32.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-react": "^7.20.6",
     "eslint-plugin-react-hooks": "^4.1.0",
     "source-map-explorer": "^2.5.0",
-    "typescript": "^4.0.2"
+    "typescript": "4.5.2"
   }
 }
