--- a/package.json
+++ b/package.json
@@ -2,30 +2,29 @@
   "name": "holo-now",
   "version": "0.1.0",
   "dependencies": {
-    "@emotion/core": "^10.0.35",
-    "@emotion/styled": "^10.0.27",
-    "@fortawesome/fontawesome-svg-core": "^1.2.30",
-    "@fortawesome/free-brands-svg-icons": "^5.14.0",
-    "@fortawesome/free-regular-svg-icons": "^5.14.0",
-    "@fortawesome/free-solid-svg-icons": "^5.14.0",
-    "@fortawesome/react-fontawesome": "^0.1.11",
+    "@emotion/react": "11.7.0",
+    "@emotion/styled": "11.6.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-brands-svg-icons": "^5.15.4",
+    "@fortawesome/free-regular-svg-icons": "^5.15.4",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.16",
     "dayjs": "^1.8.35",
-    "emotion": "^10.0.27",
-    "emotion-normalize": "^10.1.0",
+    "emotion": "11.0.0",
+    "emotion-normalize": "11.0.1",
     "immer": "^7.0.8",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3",
-    "recoil": "0.0.10"
+    "next": "12.0.7",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "recoil": "^0.5.2"
   },
   "scripts": {
-    "analyze": "source-map-explorer 'build/static/js/*.js'",
-    "lint": "eslint src/**/*",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "next dev",
+    "build": "next build",
+    "export": "next export",
+    "start": "next start",
+    "lint": "next lint",
+    "test": "jest --watch"
   },
   "browserslist": {
     "production": [
@@ -47,15 +46,15 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
-    "@types/react-router-dom": "^5.1.5",
     "@typescript-eslint/eslint-plugin": "^4.0.1",
     "@typescript-eslint/parser": "^4.0.1",
-    "eslint-config-airbnb": "^18.2.0",
+    "eslint": "7.32.0",
+    "eslint-config-next": "12.0.7",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-react": "^7.20.6",
     "eslint-plugin-react-hooks": "^4.1.0",
     "source-map-explorer": "^2.5.0",
-    "typescript": "^4.0.2"
+    "typescript": "4.5.2"
   }
 }
