--- a/package.json
+++ b/package.json
@@ -44,13 +44,16 @@
     "@types/react-dom": "16.9.14",
     "@typescript-eslint/eslint-plugin": "4.0.1",
     "@typescript-eslint/parser": "4.0.1",
+    "autoprefixer": "10.4.0",
     "eslint": "7.32.0",
     "eslint-config-next": "12.0.7",
     "eslint-plugin-import": "2.25.3",
     "eslint-plugin-jsx-a11y": "6.5.1",
     "eslint-plugin-react": "7.27.1",
     "eslint-plugin-react-hooks": "4.3.0",
+    "postcss": "8.2.15",
     "source-map-explorer": "2.5.2",
+    "tailwindcss": "3.0.7",
     "typescript": "4.5.2"
   }
 }
