--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     ]
   },
   "devDependencies": {
+    "@tailwindcss/line-clamp": "0.3.0",
     "@types/node": "12.20.37",
     "@types/react": "16.14.21",
     "@types/react-dom": "16.9.14",
